charts/synapse/tests/golden/fixtures/test-matrix-auth-httproute.golden.yaml
---
# Source: synapse/templates/matrix-authentication-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-authentication
spec:
  parentRefs:
    - name: matrix-gateway
      namespace: gateway-system
  hostnames:
    - NOT-CONFIGURED
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: matrix-authentication
          port: 80
